# hang_uni_man_client

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: CMakeLists.txt  core.cpp  core.h  main.cpp  resources.qrc
src/ui/: Game.qml  HiddenWord.qml  Keyboard.qml  Main.qml  Room.qml
